lang/tests/compile_fail/account_reference_field.stderr
error[E0308]: `?` operator has incompatible types
 --> tests/compile_fail/account_reference_field.rs:4:10
  |
4 | #[derive(Accounts)]
  |          ^^^^^^^^ expected `&mut Signer`, found `Signer`
  |
  = note: `?` operator cannot convert from `quasar_lang::accounts::Signer` to `&'account mut quasar_lang::accounts::Signer`
  = note: this error originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)
